sources/app.css
@import url(https://fonts.googleapis.com/earlyaccess/nanumgothic.css);
@import url(https://fonts.googleapis.com/css?family=Patua+One);

* {
	font-family: 'Nanum Gothic', serif;
	font-weight: 400;
	font-smoothing: antialiased;
	user-select: none;
}

table * {
	user-select: all;
  transition: opacity .3s ease-in-out;
}

body {
	transform: translate3d(0,0,0);
}

.cursor-help {
	cursor: help;
}

.small {
	font-size: .7rem;
}

.big {
	height: 36px;
	width: 36px;
}

.spin {
	transition: transform .5s ease-in-out;  
}

.spin:hover {
	transform: rotate(360deg);
}

paper-checkbox {
	padding: 20px 10px 20px 20px;
}

.panel {
	padding: 0 10px 0 10px;
}

#clear-button {
	padding: 0 0 0 40px;
}

#search-reset {
	width: 80%;
	max-width: 200px;
}

paper-radio-button::shadow #ink {
  color: grey;
}

paper-radio-button.radio-black::shadow #onRadio {
	background-color: grey;
}

paper-radio-button.radio-red::shadow #onRadio {
  background-color: crimson;
}

paper-radio-button.radio-pink::shadow #onRadio {
  background-color: hotpink;
}

paper-radio-button.radio-green::shadow #onRadio {
  background-color: yellowgreen;
}

paper-radio-button.radio-blue::shadow #onRadio {
  background-color: dodgerblue;
}

paper-input-decorator /deep/ .focused-underline, paper-input-decorator /deep/ .cursor {
	/* line color when the input is focused */
	background-color: #0f9d58;
}

html /deep/ paper-action-dialog {
	max-width: 600px;
}

html /deep/ [autofocus] {
	color: #0f9d58;
}

table, th, td, tr {	
	text-align: center;
	text-overflow: ellipsis; 
	overflow: hidden;
	vertical-align: middle;
	white-space: nowrap;
	table-layout: fixed;
}

tr:first-child > * {
	overflow: visible;
}

td {
	ax-width: 100px;
}

table {
	font-size: .8rem;
}

th, th > * {
	font-weight: bold;
	cursor: default;
}

h1, h2, h3, h4, h5, h6 {
	margin: auto;
}

a {
	color: #31B404;
  	font-weight: normal;
}

a:hover, a:focus {
	color: #298A08;
}

core-animated-pages, core-pages {
  	width: 100%;
  	height: 100%;
  	user-select: none;
  	overflow: hidden;
	background-color: white;
}

core-animated-pages > *, , core-pages > * {
  	border-radius: 5px;
  	background-color: white;
}

body /deep/ core-toolbar {
  	background-color: #31B404;
  	color: #fff;
	font-size: 1.4rem;
	cursor: default;
}

#titlebar {  
  	text-overflow: ellipsis;
  	overflow: hidden;
  	white-space: nowrap;
}

#navheader {
  background-image: url(../bg1.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

#navtext {
  margin-left: .2rem;
  font-family: 'Patua One', cursive;
  color: white;
  text-shadow: 1px 1px black, 1px 1px black, 1px 1px black, 1px 1px black;
}

core-menu {
  	color: #298A08;
  	margin: 10px 0 0 0;
}

#scaffold > core-header-panel:nth-child(1) > core-menu:nth-child(3) {
  margin-bottom: 10px; 
}

.nav-item {
  	transition: all 300ms ease-in-out;
	padding: 4px 16px;
}

.nav-item.core-selected:not([nobackground]) {
  	background: #E3F6CE;
}

.core-selected {
  	font-weight: normal;
}

.content {
	overflow: auto;
}

.content > div > table, .panel {	
	max-width: 900px;
}

@media all and (max-width: 800px) {
  	core-animated-pages, , core-pages {
    	width: 100%;
    	height: 100%;
  	}
	
	.sub, .sub * {
		display: none;
	}
}

google-chart {
  height: 100%;
  width: 100%;
}

